objects/fcio1__Fullcast_Dupe_Policy__c.object
<CustomObject>
    <fields>
        <fullName>fcio1__Action__c</fullName>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Merge</fullName>
                </value>
                <value>
                    <fullName>Tag</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>fcio1__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fcio1__Approval_Criteria__c</fullName>
        <label>Approval Criteria</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>fcio1__Approver__c</fullName>
        <label>Approver</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>fcio1__Review_Fields__c</fullName>
        <label>Review Fields</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>fcio1__Tag_Field__c</fullName>
        <label>Tag Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fcio1__Target_Entity__c</fullName>
        <label>Target Entity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fcio1__Territory_External__c</fullName>
        <label>Territory External</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fcio1__Territory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Territory</label>
        <referenceTo>fcio1__GTM__c</referenceTo>
        <relationshipLabel>Fullcast Dupe Policies</relationshipLabel>
        <relationshipName>Fullcast_Dupe_Policies</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Fullcast Dupe Policy</label>
    <listViews>
        <fullName>fcio1__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Fullcast Dupe Policy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fullcast Dupe Policies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>